--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Vollkorn:600,600i&display=swap&subset=latin-ext");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext");
+@import url("juliamono.css");
+
 #title {
     /* position: absolute; */
     /* left: 0; */
@@ -110,7 +112,7 @@ pluto-filepicker .CodeMirror {
     opacity: 0.6;
     font-style: normal;
     font-weight: 500;
-    font-family: "Roboto Mono", monospace !important;
+    font-family: "Roboto Mono", monospace;
     font-size: 0.75rem;
     letter-spacing: 1px;
     background: none;
@@ -131,7 +133,7 @@ pluto-filepicker button {
     border: 2px solid #6c8489;
     color: white;
     /* border: none; */
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", monospace;
     font-weight: 600;
     font-size: 0.75rem;
 }
@@ -159,7 +161,7 @@ ul.CodeMirror-hints {
 }
 
 ul.CodeMirror-hints {
-    font-family: "Roboto Mono", monospace !important;
+    font-family: JuliaMono, monospace !important;
     font-size: 0.75em;
 }
 
