--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -24,7 +24,7 @@ main {
     min-height: calc(100vh - 130px - 3.5rem);
     max-width: 700px;
     margin: 0 auto;
-    /* margin-top: 80px; */
+    padding-top: 20px;
     padding-bottom: 4rem;
     padding-left: 25px;
     padding-right: 6px;
