clean fix url escaping

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -164,7 +164,7 @@ a {
 
 pluto-output code {
     font-family: JuliaMono, monospace;
-    font-size: 0.75rem;
+    font-size: 0.75em; /* not rem */
 }
 
 pluto-output pre {
