--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Vollkorn:600,600i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,greek,latin-ext,vietnamese");
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,500,500i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese");
 @import url("juliamono.css");
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* VARIABLES */
 
@@ -1139,119 +1140,149 @@ dropruler {
 
 #helpbox-wrapper {
     display: none;
+    position: sticky;
+    bottom: 0px;
+    height: 0px;
+    width: 100%;
+    z-index: 5;
 }
 
-@media screen and (min-width: calc(700px + 25px + 6px + 350px)) {
+@media screen and (min-width: 500px) {
     #helpbox-wrapper {
         display: block;
-        position: sticky;
-        bottom: 0px;
-        height: 0px;
-        width: 100%;
-        z-index: 5;
     }
-    pluto-helpbox {
-        bottom: 0px;
-        right: 20px;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        width: calc(100vw - 50px - (700px + 25px + 6px)); /* compat */
-        width: calc(min(100vw - 50px - (700px + 25px + 6px), 450px));
-        height: 70vh; /* compat */
-        height: min(70vh, 900px);
-        /* overflow: hidden; */
-        background-color: white;
-        /* border: 2px solid darkgray; */
-        border-right: none;
-        border-bottom: none;
-        border-top-left-radius: 9px;
-        box-shadow: 0 0 11px 0px #00000010;
-        font-family: "Alegreya Sans", sans-serif;
-    }
+}
+pluto-helpbox {
+    bottom: 0px;
+    right: 20px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: calc(100vw - 50px - (700px + 25px + 6px)); /* compat */
+    width: calc(max(min(100vw - 50px - (700px + 25px + 6px), 450px), 300px));
+    height: 70vh; /* compat */
+    height: min(70vh, 900px);
+    /* overflow: hidden; */
+    background-color: white;
+    /* border: 2px solid darkgray; */
+    border-right: none;
+    border-bottom: none;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    box-shadow: 0 0 11px 0px #00000010;
+}
+pluto-helpbox > header {
+    display: flex;
+    padding: 15px;
+    background-color: #eef1f7;
+    color: hsl(230, 14%, 11%);
+    font-family: "Roboto Mono", monospace;
+    font-weight: 700;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    /* border-top: 4px solid #8a8a8a; */
+}
+pluto-helpbox > header::before {
+    content: "📖 ";
+    margin-right: 10px;
+}
+/* pluto-helpbox.loading>header::before{
+    content: "⌛ ";
+    margin-right: 10px;
+} */
+pluto-helpbox.hidden > header::before {
+    content: "📚 ";
+    margin-right: 10px;
+}
+pluto-helpbox > header > input {
+    flex-grow: 1;
+    background-color: inherit;
+    color: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    border: none;
+}
+pluto-helpbox > header > input:focus {
+    outline: none;
+}
+pluto-helpbox > header > button {
+    border: none;
+    background: none;
+    cursor: pointer;
 
-    pluto-helpbox > header {
-        display: flex;
-        padding: 15px;
-        background-color: #eef1f7;
-        color: hsl(230, 14%, 11%);
-        font-family: "Roboto Mono", monospace;
-        font-weight: 700;
-        border-top-left-radius: 6px;
-        border-top-right-radius: 6px;
-        /* border-top: 4px solid #8a8a8a; */
-    }
-    pluto-helpbox > header::before {
-        content: "📖 ";
-        margin-right: 10px;
-    }
-    /* pluto-helpbox.loading>header::before{
-                content: "⌛ ";
-        margin-right: 10px;
-            } */
-    pluto-helpbox.hidden > header::before {
-        content: "📚 ";
-        margin-right: 10px;
-    }
-    pluto-helpbox > header > input {
-        flex-grow: 1;
-        background-color: inherit;
-        color: inherit;
-        font-family: inherit;
-        font-weight: inherit;
-        font-size: inherit;
-        border: none;
-    }
-    pluto-helpbox > header > input:focus {
-        outline: none;
-    }
-    pluto-helpbox > header > button {
-        border: none;
-        background: none;
-        cursor: pointer;
+    /* for bigger hitbox */
+    margin: -15px;
+    border: 15px solid transparent;
+}
+pluto-helpbox > header > button > span {
+    display: block;
+    content: " " !important;
+    background-size: 1em 1em;
+    height: 1em;
+    width: 1em;
+    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/chevron-down-outline.svg");
+}
+pluto-helpbox.hidden {
+    height: initial;
+    cursor: pointer;
+}
+pluto-helpbox.hidden > section {
+    display: none;
+}
 
-        /* for bigger hitbox */
-        margin: -15px;
-        border: 15px solid transparent;
-    }
-    pluto-helpbox > header > button > span {
-        display: block;
-        content: " " !important;
-        background-size: 1em 1em;
-        height: 1em;
-        width: 1em;
-        background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/chevron-down-outline.svg");
-    }
+/* NOTE */
+/* We try to match the visual style of Documenter.jl, so we have copied over some rules from */
+/* https://docs.julialang.org/en/v1/assets/themes/documenter-light.css */
+/* see https://github.com/JuliaDocs/Documenter.jl for author information */
 
-    pluto-helpbox > section {
-        height: 100%;
-        overflow: auto;
-        padding: 10px;
-    }
-    pluto-helpbox > section h1,
-    pluto-helpbox > section h2,
-    pluto-helpbox > section h3,
-    pluto-helpbox > section h4,
-    pluto-helpbox > section h5,
-    pluto-helpbox > section h6 {
-        font-family: inherit;
-        border-bottom: none;
-        font-size: 1rem;
-    }
-    pluto-helpbox > section h1 {
-        font-size: 1.3rem;
-    }
-    pluto-helpbox > section pre {
-        overflow-x: auto;
-    }
-    pluto-helpbox.hidden {
-        height: initial;
-        cursor: pointer;
-    }
-    pluto-helpbox.hidden > section {
-        display: none;
-    }
-    
+pluto-helpbox {
+    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    line-height: 1.5;
+}
+pluto-helpbox pre, pluto-helpbox code {
+    /* from https://docs.julialang.org/en/v1/assets/themes/documenter-light.css */
+    font-family: "Roboto Mono", "SFMono-Regular", "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono", monospace;
+    font-size: 0.875em;
+}
+pluto-helpbox pre code {
+    font-size: 1em;
+}
+
+pluto-helpbox > section {
+    height: 100%;
+    overflow: auto;
+    padding: 10px;
+}
+pluto-helpbox > section h1,
+pluto-helpbox > section h2,
+pluto-helpbox > section h3,
+pluto-helpbox > section h4,
+pluto-helpbox > section h5,
+pluto-helpbox > section h6 {
+    font-family: inherit;
+    border-bottom: none;
+    font-size: 1rem;
+}
+pluto-helpbox > section h1 {
+    font-size: 1.3rem;
+}
+pluto-helpbox > section pre {
+	padding: 0.7rem 0.5rem;
+	-webkit-overflow-scrolling: touch;
+    overflow-x: auto;
+    background: whitesmoke;
+    border: 1px solid #dbdbdb;
+	white-space: pre;
+	word-wrap: normal;
+}
+/* pluto-helpbox > section code {
+    background-color: whitesmoke;
+    padding: 0.1em;
+} */
+pluto-helpbox > section hr {
+    border: none;
+    border-top: 3px solid rgba(0, 0, 0, 0.15);
 }
 
 /* FOOTER */
