--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -8,6 +8,12 @@
 
 :root {
     --pluto-cell-spacing: 17px;
+    /* use the value "contextual" to enable contextual ligatures
+        for julia mono see here: https://cormullion.github.io/pages/2020-07-26-JuliaMono/#contextual_and_stylistic_alternates_and_ligatures
+    */
+    --font-variant-ligatures: none;
+    /* e.g. "zero", "ss05"; Also see link above for options */
+    --font-feature-settings: off;
 }
 
 /* GENERAL PAGE LAYOUT */
@@ -60,6 +66,13 @@ main {
 
 pluto-notebook {
     display: block;
+}
+
+pluto-notebook .CodeMirror pre.CodeMirror-line,
+pluto-notebook .CodeMirror pre.CodeMirror-line-like {
+
+  font-variant-ligatures: var(--font-variant-ligatures);
+  font-feature-settings: var(--font-feature-settings);
 }
 
 /* STANDARD HTML ELEMENTS */
@@ -1609,4 +1622,5 @@ pluto-input:focus-within .cm-s-default .CodeMirror-matchingbracket {
 .cm-s-default.CodeMirror-empty {
     color: rgba(0, 0, 0, 0.2);
     font-style: italic;
+}
 }
