--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1289,19 +1289,59 @@ pluto-helpbox > section hr {
 
 footer {
     width: 100%;
-    height: 3.5rem;
+    /* height: 3.5rem; */
+    padding-top: 0.2rem;
+    padding-bottom: 0.5rem;
     font-family: "Roboto Mono", monospace;
     font-size: 0.75rem;
     background-color: #d7dcd3;
     color: #333333;
     z-index: 7;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+footer #feedback {
+    flex-grow: 1;
+    flex-shrink: 0;
 }
 
 footer form {
     height: 1.5rem;
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    /* flex-wrap: wrap; */
+}
+
+footer form > label {
+    flex: 0 1 auto;
+    text-align: right;
+    /* width: 50%; */
+}
+
+footer form > input {
+    flex: 0 0 auto;
+    width: 50%;
+    padding-right: 0.5rem;
+}
+
+footer form > button {
+    padding-left: 0.5rem;
+}
+
+footer #faq {
+    flex: 0 0 auto;
+    margin-left: 2%;
+}
+
+footer #statistics {
+    flex: 0 0 auto;
+    margin-right: 2%;
 }
 
 footer form > * {
