--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -345,7 +345,6 @@ body > header {
     min-height: 60px;
 
     z-index: 5;
-    /* overflow: hidden; */
     background-color: white;
     transform: translateY(0px);
     transition: background-color 0.5s ease-in-out, transform 0.25s cubic-bezier(0.18, 0.89, 0.49, 1.13);
@@ -1327,7 +1326,7 @@ footer form > label {
 }
 
 footer form > a {
-    margin-right: auto;
+    margin-right: 1em;
 }
 
 footer a {
