--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -122,13 +122,31 @@ jltree.collapsed r:last-child::after {
     content: "";
 }
 
-jltree r > more::after {
-    content: "⁝";
-    margin-left: 0.2em;
+jltree r > more {
+    display: inline-block;
+    margin: 0.6em 0em;
+    cursor: pointer;
 }
 
-jltree.collapsed r > more::after {
-    content: "⋅⋅⋅";
+jltree r > more::before {
+    margin-left: 0.2em;
+    margin-right: 0.5em;
+    top: -0.1em;
+    display: inline-block;
+    position: relative;
+    content: "";
+    background-size: 100%;
+    height: 17px;
+    width: 17px;
+    opacity: 0.5;
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/ellipsis-vertical.svg);
+}
+
+jltree.collapsed r > more {
+    margin: 0em;
+}
+jltree.collapsed r > more::before {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/ellipsis-horizontal.svg);
 }
 
 /*  */
