--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1094,6 +1094,26 @@ pluto-input > button.delete_cell > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/close-circle-outline.svg);
 }
 
+/* PKG UI */
+
+pkg-bubble {
+    width: 6em;
+    margin-left: 0.3em;
+    display: inline-block;
+    background: #b6bcc738;
+    border: 3px solid #afafe269;
+    border-radius: 4px;
+    color: #748c77;
+}
+pkg-bubble select {
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    font-size: 0.75rem;
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+}
+
 /* RUNAREA */
 
 pluto-runarea {
