--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1104,7 +1104,7 @@ pkg-bubble {
     width: 6em;
     margin-left: 0.3em;
     display: inline-block;
-    background: #b6bcc738;
+    background: #d3752538;
     border: 3px solid #bfaa65;
     border-radius: 4px;
     color: #748c77;
@@ -1112,6 +1112,7 @@ pkg-bubble {
 
 pkg-bubble.installed {
     border-color: #afafe269;
+    background: #b6bcc738;
 }
 pkg-bubble.not_found {
     width: 2em;
@@ -1125,6 +1126,15 @@ pkg-bubble select {
     font-weight: 700;
     text-align: center;
     text-align-last: center;
+}
+
+pkg-bubble option {
+    background: #d3752538;
+    color: #00000060;
+}
+pkg-bubble option.installed {
+    background: unset;
+    color: black;
 }
 
 /* RUNAREA */
