Make docs work with non-bindings (So you can do a basic inspect of values)

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1257,6 +1257,9 @@ pluto-helpbox > header > input {
     font-size: inherit;
     border: none;
 }
+pluto-helpbox.notfound > header > input {
+    color: red;
+}
 pluto-helpbox > header > input:focus {
     outline: none;
 }
